@@ -127,6 +127,9 @@ MATCH_VIA_CONTENT	t/filetypes.t	/^MATCH_VIA_CONTENT: {$/;"	l
 MATCH_WITH_BACKREF	t/ack-color.t	/^MATCH_WITH_BACKREF: {$/;"	l
 METACHARACTERS	t/highlighting.t	/^METACHARACTERS: {$/;"	l
 MULTIPLE_MATCHES	t/ack-color.t	/^MULTIPLE_MATCHES: {$/;"	l
+MY	Makefile.PL	/^package MY;$/;"	p
+MY	Makefile.PL	/^sub MY::postamble {$/;"	s
+MY	Makefile.PL	/^sub MY::test {$/;"	s
 Miscellaneous	lib/App/Ack.pm	/^Miscellaneous:$/;"	l
 NEEDS_LINE_SCAN	t/needs-line-scan.t	/^NEEDS_LINE_SCAN: {$/;"	l
 NOIGNORE_DIR_RELATIVE_PATHS	t/ack-ignore-dir.t	/^NOIGNORE_DIR_RELATIVE_PATHS: {$/;"	l
@@ -197,6 +200,7 @@ _check_for_ackrc	lib/App/Ack/ConfigFinder.pm	/^sub _check_for_ackrc {$/;"	s
 _check_for_mutually_exclusive_options	lib/App/Ack/ConfigLoader.pm	/^sub _check_for_mutually_exclusive_options {$/;"	s
 _check_message	t/Util.pm	/^sub _check_message {$/;"	s
 _clean	t/ack-man.t	/^sub _clean {$/;"	s
+_color_cell	lib/App/Ack.pm	/^sub _color_cell {$/;"	s
 _compare_opts	lib/App/Ack/ConfigLoader.pm	/^sub _compare_opts {$/;"	s
 _compile_descend_filter	ack	/^sub _compile_descend_filter {$/;"	s
 _compile_file_filter	ack	/^sub _compile_file_filter {$/;"	s
@@ -222,6 +226,8 @@ _remove_default_options_if_needed	lib/App/Ack/ConfigLoader.pm	/^sub _remove_defa
 _remove_directory_separator	lib/App/Ack/ConfigLoader.pm	/^sub _remove_directory_separator {$/;"	s
 _remove_redundancies	lib/App/Ack/ConfigFinder.pm	/^sub _remove_redundancies {$/;"	s
 _section	t/ack-man.t	/^sub _section {$/;"	s
+_show_color_grid	lib/App/Ack.pm	/^sub _show_color_grid {$/;"	s
+_show_rgb_grid	lib/App/Ack.pm	/^sub _show_rgb_grid {$/;"	s
 _test_home_ackrc	t/forbidden-options.t	/^sub _test_home_ackrc {$/;"	s
 _test_project_ackrc	t/forbidden-options.t	/^sub _test_project_ackrc {$/;"	s
 _uninvert_filter	lib/App/Ack/ConfigLoader.pm	/^sub _uninvert_filter {$/;"	s
@@ -241,6 +247,7 @@ add_line	t/Barfly.pm	/^sub add_line {$/;"	s
 append_file	t/Util.pm	/^sub append_file {$/;"	s
 are_mutually_exclusive	t/mutex-options.t	/^sub are_mutually_exclusive {$/;"	s
 basename	lib/App/Ack/File.pm	/^sub basename {$/;"	s
+bininst	Makefile.PL	/^bininst : $(ACK)$/;"	l
 bisect	dev/find-minimum-dep-versions.pl	/^sub bisect (&@) {$/;"	s
 build_ack_invocation	t/Util.pm	/^sub build_ack_invocation {$/;"	s
 build_regex	ack	/^sub build_regex {$/;"	s
@@ -263,6 +270,7 @@ create_group	lib/App/Ack/Filter/Is.pm	/^sub create_group {$/;"	s
 create_group	lib/App/Ack/Filter/IsPath.pm	/^sub create_group {$/;"	s
 create_group	lib/App/Ack/Filter/Match.pm	/^sub create_group {$/;"	s
 create_tempfile	t/Util.pm	/^sub create_tempfile {$/;"	s
+critic	Makefile.PL	/^critic:$/;"	l
 die	lib/App/Ack.pm	/^sub die {$/;"	s
 dir_cleanup	t/named-pipes.t	/^sub dir_cleanup {$/;"	s
 do_parent	t/ack-x.t	/^sub do_parent {$/;"	s
@@ -292,6 +300,7 @@ firstliney	lib/App/Ack/File.pm	/^sub firstliney {$/;"	s
 from_argv	lib/App/Ack/Files.pm	/^sub from_argv {$/;"	s
 from_file	lib/App/Ack/Files.pm	/^sub from_file {$/;"	s
 from_stdin	lib/App/Ack/Files.pm	/^sub from_stdin {$/;"	s
+fulltest	Makefile.PL	/^fulltest: test_classic test_standalone test_xt$/;"	l
 get_arg_spec	lib/App/Ack/ConfigLoader.pm	/^sub get_arg_spec {$/;"	s
 get_expected_options	t/Util.pm	/^sub get_expected_options {$/;"	s
 get_file_id	ack	/^sub get_file_id {$/;"	s
@@ -328,6 +337,7 @@ is_nonempty_array	t/Util.pm	/^sub is_nonempty_array {$/;"	s
 is_windows	t/Util.pm	/^sub is_windows {$/;"	s
 line_split	t/Util.pm	/^sub line_split {$/;"	s
 lists_match	t/Util.pm	/^sub lists_match {$/;"	s
+main	Makefile.PL	/^package main;$/;"	p
 msg	t/Util.pm	/^sub msg {$/;"	s
 name	lib/App/Ack/File.pm	/^sub name {$/;"	s
 new	lib/App/Ack/ConfigFinder.pm	/^sub new {$/;"	s
@@ -348,6 +358,7 @@ new	t/Barfly.pm	/^sub new {$/;"	s
 new	t/filter.t	/^sub new {$/;"	s
 next	lib/App/Ack/Files.pm	/^sub next {$/;"	s
 no_home	t/config-finder.t	/^sub no_home {$/;"	s
+nytprof	Makefile.PL	/^nytprof: all$/;"	l
 o	t/file-permission.t	/^sub o { return sprintf '%o', shift }$/;"	s
 open	lib/App/Ack/File.pm	/^sub open {$/;"	s
 opt_parser	lib/App/Ack/ConfigLoader.pm	/^sub opt_parser {$/;"	s
@@ -389,17 +400,25 @@ set_up_pager	lib/App/Ack.pm	/^sub set_up_pager {$/;"	s
 sets_match	t/Util.pm	/^sub sets_match {$/;"	s
 show_docs	lib/App/Ack.pm	/^sub show_docs {$/;"	s
 show_help	lib/App/Ack.pm	/^sub show_help {$/;"	s
+show_help_colors	lib/App/Ack.pm	/^sub show_help_colors {$/;"	s
+show_help_rgb	lib/App/Ack.pm	/^sub show_help_rgb {$/;"	s
 show_help_types	lib/App/Ack.pm	/^sub show_help_types {$/;"	s
 show_types	lib/App/Ack.pm	/^sub show_types {$/;"	s
 slurp	t/file-iterator.t	/^sub slurp {$/;"	s
 strip_special_chars	xt/man.t	/^sub strip_special_chars {$/;"	s
 subtest_name	t/Util.pm	/^sub subtest_name {$/;"	s
 swamp_files	t/FilterTest.pm	/^sub swamp_files {$/;"	s
+tags	Makefile.PL	/^tags:$/;"	l
+test	Makefile.PL	/^test: test_classic test_standalone$/;"	l
 test_ack_with	t/illegal-regex.t	/^sub test_ack_with {$/;"	s
+test_classic	Makefile.PL	/^test_classic: all$/;"	l
 test_loader	t/config-loader.t	/^sub test_loader {$/;"	s
 test_match	t/ack-match.t	/^sub test_match {$/;"	s
+test_standalone	Makefile.PL	/^test_standalone: all ack-standalone$/;"	l
+test_xt	Makefile.PL	/^test_xt: all$/;"	l
 thpppt	lib/App/Ack.pm	/^sub thpppt {$/;"	s
 time_ack	dev/timings.pl	/^sub time_ack {$/;"	s
+timings	Makefile.PL	/^timings: ack-standalone$/;"	l
 to_string	lib/App/Ack/Filter.pm	/^sub to_string {$/;"	s
 to_string	lib/App/Ack/Filter/Collection.pm	/^sub to_string {$/;"	s
 to_string	lib/App/Ack/Filter/Extension.pm	/^sub to_string {$/;"	s
