@@ -2,6 +2,9 @@ History file for ack 3.  https://beyondgrep.com/
 
 NEXT
 =====================================
+[ENHANCEMENTS]
+Added --help-colors and --help-rgb-colors options to display colors
+available for color options.
 
 
 2.999_06 Thu Jan 10 20:37:23 CST 2019
